# maccell-crm

./: .dockerignore  .gitignore  CEREBRO.md  Dockerfile  IA.html  README.md  SETUP_AFIP.md  check-data.js  check-users.ts  debug-tech.js  docker-compose.yml  eslint.config.mjs  get-groq-models.js  https-server.js  instrumentation.ts  next.config.ts  package-lock 2.json  package-lock.json  package.json  prisma-check-adapter.ts  prisma-check.ts  reproduce_issue.ts  reproduce_issue_v3.ts  test-ai-exports.js  test-ai-exports.mjs  test-ai-history.mjs  test-ai-stream.mjs  test-ai.js  test-gemini-retry.js  test-gemini.js  test-gemini2.js  test-groq-11b.js  test-groq-vision.js  test-groq.js  test-groq2.js  test-openrouter-v2.js  verify-backup.js  verify_client.ts
services/cerebro-rag-worker/: .dockerignore  Dockerfile  Dockerfile.gpu  pyproject.toml  requirements-gpu.txt  requirements-runtime.txt
services/cerebro-rag-worker/src/cerebro_rag/: __init__.py  authority.py  chunking.py  cli.py  config.py  db.py  device_alias_catalog.py  document_versions.py  embeddings.py  gpu_server.py  indexer.py  jobs.py  migrations.py  models.py  normalize.py  page_metadata.py  page_renderer.py  (+8 more)
services/cerebro-rag-worker/tests/: test_authority.py  test_chunking.py  test_device_alias_catalog.py  test_embeddings.py  test_gpu_server.py  test_idempotency.py  test_indexer.py  test_jobs.py  test_migrations.py  test_normalize.py  test_page_metadata.py  test_page_renderer.py  test_pdf_extract.py  test_pdf_inventory.py  test_repair_sync.py  test_repairs.py  test_runtime_dependencies.py  test_schema.py
(+626 files in other folders)
