[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "maccell-cerebro-rag-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "psycopg[binary,pool]==3.2.9",
    "pydantic-settings==2.10.1",
    "sentence-transformers==5.0.0",
    "pypdf==5.8.0",
    "pdf2image==1.17.0",
    "pytesseract==0.3.13",
]

[project.optional-dependencies]
test = ["pytest==8.4.1", "testcontainers[postgres]==4.10.0"]

[project.scripts]
cerebro-rag = "cerebro_rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cerebro_rag"]

[tool.pytest.ini_options]
pythonpath = ["src"]
